fix create new folder text overlaping issue

--- a/src/app/browse/browse/browse.component.css
+++ b/src/app/browse/browse/browse.component.css
@@ -2442,7 +2442,7 @@ font-weight: normal;
   right: 0px;
   top: 50px;
   /* left: auto; */
-  z-index: 9;
+  z-index: 999;
 }
 .createNew{
   font-size: 15px;
